// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeToggle should match the snapshot (Dark Theme) 1`] = `
.c0 {
  margin: 5px 5px 5px auto;
}

<ThemeToggle
  isDarkTheme={true}
  onClick={[Function]}
>
  <Component
    className="c0"
    isDarkTheme={true}
    onClick={[Function]}
  >
    <button
      className="btn btn-primary c0"
      onClick={[Function]}
    >
      <ThemeIcon
        isDarkTheme={true}
      >
        <i
          className="fas fa-sun"
        />
      </ThemeIcon>
    </button>
  </Component>
</ThemeToggle>
`;

exports[`ThemeToggle should match the snapshot (Light Theme) 1`] = `
.c0 {
  margin: 5px 5px 5px auto;
}

<ThemeToggle
  isDarkTheme={false}
  onClick={[Function]}
>
  <Component
    className="c0"
    isDarkTheme={false}
    onClick={[Function]}
  >
    <button
      className="btn btn-primary c0"
      onClick={[Function]}
    >
      <ThemeIcon
        isDarkTheme={false}
      >
        <i
          className="fas fa-moon"
        />
      </ThemeIcon>
    </button>
  </Component>
</ThemeToggle>
`;
